# N_planets

./: CMakeLists.txt  dymatrix.h  geometry.h  main.cpp
runge_kutta/: runge_kutta.cpp  runge_kutta.h
system_of_planets/: system_of_planets.cpp  system_of_planets.h
